# json-formatter

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  Trunk.toml  index.html  run.sh
frontend/: index.html  main.js  styles.css
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
