[package]
name = "json-formatter"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "Clipboard", "Navigator", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = "0.11"
