[package]
name = "json-formatter"
version = "1.0.0"
description = "A JSON formatter and converter tool"
authors = ["maskipli.id@gmail.com"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-clipboard-manager = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

