[package]
name = "json-formatter"
version = "1.2.0"
description = "A JSON formatter and converter tool"
authors = ["maskipli.id@gmail.com"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-log = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
image = "0.24"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
